--- a/GreenCharger/src/app/core/components/header/header.component.html
+++ b/GreenCharger/src/app/core/components/header/header.component.html
@@ -32,7 +32,7 @@
       <div class="search-box">
         <input type="text" placeholder="Tìm kiếm sản phẩm..." class="search-input" />
         <button class="search-btn">
-          <i class="search-icon">🔍</i>
+          <i class="search-icon"></i>
         </button>
       </div>
 
